syntax = "proto3";
package product_srv;
option go_package = "./;product_srv";

service SecKills {
    rpc SecKillList(SecKillsRequest) returns (SecKillsResponse){}
    rpc GetProducts (ProductRequest) returns (ProductResponse) {}
    rpc SecKillAdd (SecKill) returns (SecKillResponse){}
    rpc SecKillDel (SecKillDelRequest) returns (SecKillResponse){}
    rpc SecKillToEdit (SecKillDelRequest) returns (SecKillToEditResponse){}
    rpc SecKillDoEdit (SecKill) returns (SecKillResponse){}

    rpc FrontSecKillList (FrontSecKillRequest) returns (FrontSecKillResponse){}
    rpc FrontSecKillDetail (SecKillDelRequest) returns (FrongSecKillDetailResponse){}

}

message FrontSecKillRequest{
    int64 current_page = 1;
    int64 pagesize = 2;

}

message FrongSecKillDetailResponse {
    int64 code = 1;
    string msg = 2;
    SecKill seckill = 3;

}

message FrontSecKillResponse {
    int64 code = 1;
    string msg = 2;
    repeated SecKill seckill_list = 3;
    int64 current = 4;
    int64 page_size = 5;
    int64 total_page = 6;

}


message SecKillToEditResponse {
    int64 code =1;
    string msg = 2;
    SecKill seckill =3;
    repeated SecKillProductRequest products_no =4;

}

message SecKillDelRequest {
    int64 id = 1;
}

message SecKillResponse {
    int64 code = 1;
    string msg = 2;
}
message ProductRequest {

}

message ProductResponse {
    int64 code = 1;
    string msg = 2;
    repeated SecKillProductRequest products =3;
}

message SecKillProductRequest {
    int64 id = 1;
    string pname = 2;
}


message SecKillsRequest {
    int64 current_page = 1;
    int64 pagesize = 2;
}


message SecKillsResponse {
    int64 code = 1;
    string msg = 2;
    repeated SecKill seckills =3;
    int64 total= 4;
    int64 current = 5;
    int64 page_size = 6;
}


message SecKill {
    int64 id = 1;
    string name = 2;
    float price = 3;
    int64 num = 4;
    int64 pid = 5;
    string pname = 6;
    string start_time = 7;
    string end_time = 8;
    string create_time = 9;
    string pic = 10;
    float p_price = 11;
    string pdesc = 12;
    string unit = 13;
}